Zoo Management/main/default/objects/AnimalTransfer__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Animal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Animal__c.IsAvailable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>AnimalTransfers</relationshipLabel>
    <relationshipName>AnimalTransfers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>