Zoo Management/main/default/objects/AnimalTransfer__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <formula>Animal__r.BirthDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>