Zoo Management/main/default/objects/AnimalTransfer__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <label>To</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>