Zoo Management/main/default/objects/AnimalTransfer__c/validationRules/Transfer_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Transfer_Date</fullName>
    <active>true</active>
    <errorConditionFormula>OR( TransferDate__c &lt; TODAY(),   TransferDate__c - TODAY() &gt;15  )</errorConditionFormula>
    <errorMessage>The Transfer date is out of valid region!</errorMessage>
</ValidationRule>